<resources>
    <string name="app_name">Checklist</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_checklist">New Checklist %d</string>
    <string name="add_note_dialog_title">Add Note</string>
    <string name="cancel_add_note">Cancel</string>
    <string name="save_add_note">Add</string>
    <string name="add_note_dialog_message">Enter your note</string>
    <string name="add_checklist_title">Enter checklist name</string>
    <string name="set_checklist_title">Set</string>
    <string name="action_save">Save</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_note_delete">Delete</string>
    <string name="delete_checklist">Delete</string>
</resources>
