...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/add_checklist_title">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_checklist_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

...
